<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_share">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_type" translatable="false">text/plain</string>
    <string name="url_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="write_to_supp_email">адрес_студента@example.com</string>
    <string name="write_to_supp_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="write_to_supp_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_to_supp_mailto" translatable="false">mailto:</string>
    <string name="not_found_error">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_update">Обновить</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="audio_not_found">Аудиофайл не найден</string>
    <string name="unknown" translatable="false">unknown</string>
    <string name="not_found" translatable="false">not found</string>
    <string name="title_back">Назад</string>
    <string name="media_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_not_found">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="playlists">Плейлисты</string>
    <string name="player_dafault_time">0:00</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="complete_create_playlist">Завершить создание плейлиста?</string>
    <string name="lose_data">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>


    <plurals name="plurals" translatable="false">
        <item quantity="zero">треков</item>
        <item quantity="one">трек</item>
        <item quantity="two">трека</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>
</resources>