<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.settings.fragment.SettingsFragment"
    >

    <Toolbar
        android:id="@+id/tb_title"
        style="@style/SettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:title="@string/settings"
        android:titleTextAppearance="@style/toolbar_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SwitchButton"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/padding16"
        android:paddingVertical="@dimen/padding20"
        android:text="@string/dark_theme"
        android:textSize="@dimen/primary_text_size_16"
        android:thumbTintMode="screen" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="@dimen/padding16"
        android:paddingVertical="@dimen/padding20"
        android:text="@string/share_app"
        android:textSize="@dimen/primary_text_size_16" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        android:drawableEnd="@drawable/support"
        android:paddingHorizontal="@dimen/padding16"
        android:paddingVertical="@dimen/padding20"
        android:text="@string/support"
        android:textSize="@dimen/primary_text_size_16" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        android:drawableEnd="@drawable/agreement_forward"
        android:paddingHorizontal="@dimen/padding16"
        android:paddingVertical="@dimen/padding20"
        android:text="@string/user_agreement"
        android:textSize="@dimen/primary_text_size_16" />
</LinearLayout>

