<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="28dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/search_button"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:backgroundTint="@color/white"
        android:textSize="@dimen/title_size"
        android:text="@string/search"
        android:textColor="@color/black"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius"

        />

    <Button
        android:id="@+id/media_button"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:backgroundTint="@color/white"
        android:textSize="@dimen/title_size"
        android:text="@string/media"
        android:textColor="@color/black"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius"/>

    <Button
        android:id="@+id/settings_button"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:backgroundTint="@color/white"
        android:textSize="@dimen/title_size"
        android:text="@string/settings"
        android:textColor="@color/black"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius" />
</LinearLayout>

</LinearLayout>