<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageButton
            android:id="@+id/back_button"
            android:background="@color/white"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/back"
            android:layout_gravity="start"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="7dp"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:paddingHorizontal="@dimen/side_indent"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            />
        <Switch
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:paddingHorizontal="@dimen/side_indent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:src="@drawable/share"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:paddingHorizontal="@dimen/side_indent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:src="@drawable/support"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:paddingHorizontal="@dimen/side_indent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:src="@drawable/agreement_forward"
            android:layout_gravity="end"/>
    </FrameLayout>

</LinearLayout>

