<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.search.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding16">

        <TextView
            style="@style/SettingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textAppearance="@style/Title"
            android:textSize="@dimen/primary_text_size_26" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding12"
            android:minHeight="@dimen/padding52"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchEditText"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/padding8"
                android:background="@drawable/rounded_edittext_bg"
                android:cursorVisible="true"
                android:drawableStart="@drawable/search_icon"
                android:drawablePadding="@dimen/padding4"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="@dimen/padding36"
                android:paddingStart="@dimen/padding12"
                android:paddingEnd="@dimen/padding12"
                android:singleLine="true"
                android:textColor="@color/yp_black"
                android:textCursorDrawable="@drawable/edit_text_cursor" />

            <ImageButton
                android:id="@+id/clear_button"
                android:layout_width="@dimen/height40"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginVertical="@dimen/padding8"
                android:background="@null"
                android:src="@drawable/clear"
                android:visibility="invisible"
                tools:visibility="visible" />

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/yp_blue"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/message_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding80"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rvTracks"
                    tools:src="@drawable/network_problem_light"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvMessageError"
                    style="@style/MessageError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding16"
                    android:textAlignment="center"
                    android:textSize="@dimen/primary_text_size_22"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/message_image"
                    tools:text="@string/network_error"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/button_update"
                    style="@style/ButtonUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding24"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/button_update"
                    android:textAllCaps="false"
                    android:textSize="@dimen/primary_text_size_16"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/radius_for_update_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMessageError"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTracks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_search_history_title"
                style="@style/you_were_looking_for_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_regular"
                android:paddingHorizontal="@dimen/padding16"
                android:paddingTop="@dimen/padding16"
                android:paddingBottom="@dimen/padding12"
                android:text="@string/you_were_looking_for"
                android:textSize="@dimen/primary_text_size_19"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/clear_history_button"
                style="@style/ButtonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding24"
                android:layout_marginBottom="@dimen/padding4"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/clear_history"
                android:textAllCaps="false"
                android:textSize="@dimen/primary_text_size_14"
                app:cornerRadius="@dimen/radius_for_update_button" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>